--- a/src/main/resources/templates/Profile.html
+++ b/src/main/resources/templates/Profile.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+Profile about users
+Last updated 10/30/2022
+Author(s): Alec Droegemeier
 -->
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
