--- a/src/main/resources/templates/GameTemplate.html
+++ b/src/main/resources/templates/GameTemplate.html
@@ -12,6 +12,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css" />
         <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        <script>const joinGame = document.getElementById('joinGame');
+        joinGame.addEventListener('click', function handleClick() {
+  joinGame.innerHTML = 'Remove';
+}); </script>
     </head>
     <body style="display:grid; grid-template-rows: auto 1fr auto; min-height:100vh;">
         <div th:insert="Fragments :: header">...</div>
@@ -21,34 +25,37 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h4>Platforms: PC, Console, Mobile</h4>
             <h4>Genre: Racing</h4>
             <div th:if="${hasModRole}">
-            <a href="/edit_game">Edit game</a>
+                <a href="/edit_game">Edit game</a>
             </div>
             <div style="margin-top:2.5%;margin-bottom:2.5%; display: inline-block; width:20%; border:2px solid green; ">
                 <h4> Player List</h4>
-            <ul class="demo-list-item mdl-list" >
-                <li class="mdl-list__item">
-                   
-                    <span class="mdl-list__item-primary-content">
-                        <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
-                        Bryan Cranston
-                        </a>
-                    </span>
-                </li>
-                <li class="mdl-list__item">
-                    <span class="mdl-list__item-primary-content">
-                        <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
-                        Aaron Paul
-                        </a>
-                    </span>
-                </li>
-                <li class="mdl-list__item">
-                    <span class="mdl-list__item-primary-content">
-                        <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
-                        Bob Odenkirk
-                        </a>
-                    </span>
-                </li>
-            </ul>
+                <button id="joinGame" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    Join Game
+                </button>
+                <ul class="demo-list-item mdl-list" >
+                    <li class="mdl-list__item">
+
+                        <span class="mdl-list__item-primary-content">
+                            <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
+                                Bryan Cranston
+                            </a>
+                        </span>
+                    </li>
+                    <li class="mdl-list__item">
+                        <span class="mdl-list__item-primary-content">
+                            <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
+                                Aaron Paul
+                            </a>
+                        </span>
+                    </li>
+                    <li class="mdl-list__item">
+                        <span class="mdl-list__item-primary-content">
+                            <a onclick="location.href = '/player_profile';" class="mdl-list__item-primary-content">
+                                Bob Odenkirk
+                            </a>
+                        </span>
+                    </li>
+                </ul>
             </div>
         </div>
         <div th:insert="Fragments :: footer">...</div>
