--- a/src/main/resources/templates/GameTemplate.html
+++ b/src/main/resources/templates/GameTemplate.html
@@ -26,7 +26,7 @@ Author(s): Alec Droegemeier
             <h4>Platforms: PC, Console, Mobile</h4>
             <h4>Genre: Racing</h4>
             <div th:if="${hasModRole}">
-                <a href="/edit_game">Edit game</a>
+                <a href="/edit_game/id=1">Edit game</a>
             </div>
             <div style="margin-top:2.5%;margin-bottom:2.5%; display: inline-block; width:20%; border:2px solid green; ">
                 <h4> Player List</h4>
