--- a/src/main/resources/templates/Profile.html
+++ b/src/main/resources/templates/Profile.html
@@ -33,7 +33,7 @@ Author(s): Alec Droegemeier
                     Description of Rocket League
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
-                    <a onclick="location.href = '/game_details';" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <a onclick="location.href = '/game/1';" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                         View Game Details
                     </a>
                 </div>
