--- a/src/main/resources/templates/GameList.html
+++ b/src/main/resources/templates/GameList.html
@@ -108,7 +108,7 @@ Author(s): Alec Droegemeier, Jessica Frank
                         Description
                     </div>
                     <div class="mdl-card__actions mdl-card--border">
-                        <a onclick="location.href = '/game_details';" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                        <a th:href="@{'/game/' + ${game.id}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                             View Game Details
                         </a>
                     </div>
