--- a/src/main/resources/templates/AddGameSearch.html
+++ b/src/main/resources/templates/AddGameSearch.html
@@ -24,7 +24,7 @@ Author(s): Jessica Frank
                     <label class="mdl-textfield__label" for="name-input">Game Name</label>
                 </div>
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label" style="margin:0px auto;">
-                    <input class="mdl-textfield__input" type="text" id="key-input" name="apiKey"/>
+                    <input class="mdl-textfield__input" type="password" id="key-input" name="apiKey"/>
                     <label class="mdl-textfield__label" for="key-input">Moderator Key Number</label>
                 </div>
                 <div style="margin: auto"><button type="submit" class="mdl-button mdl-js-button mdl-button--raised" style="margin-bottom: 5%;margin-left: 2.5%;margin-right: 2.5%;">
