--- a/src/main/resources/templates/GameTemplate.html
+++ b/src/main/resources/templates/GameTemplate.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!--
 Individual game page
-Last updated 11/10/2022
-Author(s): Alec Droegemeier
+Last updated 11/13/2022
+Author(s): Alec Droegemeier, Jessica Frank
 -->
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
@@ -42,14 +42,11 @@ Author(s): Alec Droegemeier
                     Join Game
                 </button>
                 <ul class="demo-list-item mdl-list" >
-                    <li class="mdl-list__item">
-
-                        <span  th:each="user: ${userId}" class="mdl-list__item-primary-content">
-                            <span th:each="userName: ${userList}" th:if="${#lists.contains(userName.id, user.user_id)}" >
-                                <a th:text="${userName.name}" th:href="@{'/user/' + ${user.user_id}}" class="mdl-list__item-primary-content">
+                    <li th:each="user: ${userList}" class="mdl-list__item">
+                        <span class="mdl-list__item-primary-content">
+                                <a th:text="${user.name}" th:href="@{'/user/' + ${user.id}}" class="mdl-list__item-primary-content">
                                     Player Names
                                 </a>
-                            </span>
                         </span>
                     </li>
                 </ul>
