--- a/src/main/resources/templates/GameTemplate.html
+++ b/src/main/resources/templates/GameTemplate.html
@@ -13,18 +13,7 @@ Author(s): Alec Droegemeier, Jessica Frank
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-teal.min.css" />
         <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-        <script>
-            function change(){
-            const btn = document.getElementById("joinGame");            
-            if(btn.value === "Join Game"){
-            btn.value = "Leave Game";
-            btn.innerHTML = "Leave Game";
-            }else{
-            btn.value = "Join Game";
-            btn.innerHTML= "Join Game";
-            }          
-            }
-        </script>
+
     </head>
     <body style="display:grid; grid-template-rows: auto 1fr auto; min-height:100vh;">
         <div th:insert="Fragments :: header">...</div>
@@ -38,15 +27,22 @@ Author(s): Alec Droegemeier, Jessica Frank
             </div>
             <div style="margin-top:2.5%;margin-bottom:2.5%; display: inline-block; width:20%; border:2px solid green; ">
                 <h4> Player List</h4>
-                <button  id="joinGame" onclick="change()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" value='Join Game'>
+                
+                <form style="display: flex; flex-direction: column" th:href="@{'/game/' + ${id}}" method="POST">
+                 <button  id="joinGame" name="action" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" value='Join Game'>
                     Join Game
                 </button>
+                    <button  id="joinGame" name="action" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" value='Leave Game'>
+                    Leave Game
+                </button>
+                </form>
+                
                 <ul class="demo-list-item mdl-list" >
                     <li th:each="user: ${userList}" class="mdl-list__item">
                         <span class="mdl-list__item-primary-content">
-                                <a th:text="${user.name}" th:href="@{'/user/' + ${user.id}}" class="mdl-list__item-primary-content">
-                                    Player Names
-                                </a>
+                            <a th:text="${user.name}" th:href="@{'/user/' + ${user.id}}" class="mdl-list__item-primary-content">
+                                Player Names
+                            </a>
                         </span>
                     </li>
                 </ul>
