--- a/src/main/resources/templates/Profile.html
+++ b/src/main/resources/templates/Profile.html
@@ -24,17 +24,17 @@ Author(s): Alec Droegemeier
                 <span th:text="${discord}"></span>
             </h4>
             <div>       
-                <h2 class="mdl-card__title-text">Favorite Game</h2>
+                <h2 class="mdl-card__title-text">Joined Games</h2>
             </div>
-             <div class="demo-card-square mdl-card mdl-shadow--2dp">
+             <div class="demo-card-square mdl-card mdl-shadow--2dp" th:each="game: ${gameList}" style="display:inline-block">
                 <div class="mdl-card__title mdl-card--expand">
-                    <h2 class="mdl-card__title-text">Rocket League</h2>
+                    <h2 th:text="${game.name}" class="mdl-card__title-text">Rocket League</h2>
                 </div>
-                <div class="mdl-card__supporting-text">
+                <div th:text="${game.description}" class="mdl-card__supporting-text">
                     Description of Rocket League
                 </div>
                 <div class="mdl-card__actions mdl-card--border">
-                    <a onclick="location.href = '/game/1';" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    <a th:href="@{'/game/' + ${game.id}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                         View Game Details
                     </a>
                 </div>
